ready for new branch ( work in progress on bonus tasks)

--- a/src/app/Modal/modal.component.html
+++ b/src/app/Modal/modal.component.html
@@ -16,6 +16,7 @@
                 *ngIf="data.modal.currentModal == 'bonus'"
                 [freeSpins]="data.freespinTypes"
                 [selectedBet]="data.game.selectedBet"
+                [currency]="data.user.currency"
                 [nominales]="data.game.nominales"
                 [betMultipliers]="data.game.betMultipliers"
                 [selectedMultiplierIndex]="data.game.selectedMultiplierIndex"
