--- a/src/app/Views/lines/lines.component.html
+++ b/src/app/Views/lines/lines.component.html
@@ -1,24 +1,26 @@
 <div class="cont">
-    <div class="lines" *ngFor="let line of lines">
-        <div class="fixedLines" *ngIf="showLines(line)">
-            <span>LINES</span>
-            <span>FIXED</span>
-        </div>
-        {{ line }}
-    </div>
-    <div class="buttons" isSelector=true *ngIf="hasButtons"  [ngStyle]="{'opacity': data.game.spinning == true && autoSpinInProgress == false ? 0 : 1}">
-        <div class="block">
-            <app-nominales-selector isNomminaleSelector=true class="nominales-selector" [ngClass]="{'open': showNMSelector}" [open]="showNMSelector" [selectedNominale]="selectedNominale" [nominales]="nominales" (nominaleChanged)="nominaleChanged($event)"></app-nominales-selector>
-            <app-autospin-selector isAutospinSelector=true class="nominales-selector" [ngClass]="{'open': showAutospinSelector}" [open]="showAutospinSelector" [selectedCounter]="selectedNominale" [spinCounters]="autoSpinCount" (nominaleChanged)="autoSpinSelected($event)"></app-autospin-selector>
-            <div [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="autospin" (click)="onAutoSpin()"></div>
-            <div class="spin stop" [ngClass]="{'stop': autoSpinInProgress}" (click)="onSpin()" #spinButton>
-                <div *ngIf="autoSpinInProgress" class="spinsCounter" [ngClass]="{'infiniteLoop': isInfinite}">
-                    {{ bonusInProgress ? bonusSpinsCount : (isInfinite ? '&#8734;' : spinsRemaining) }}
-                </div>
+    <div class="content">
+        <div class="lines" *ngFor="let line of lines">
+            <div class="fixedLines" *ngIf="showLines(line)">
+                <span>LINES</span>
+                <span>FIXED</span>
             </div>
-            <div [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="nominales_selector autospin" (click)="toggleNMSelector()">
-                <div class="icon"></div>
-                <div class="value"> {{ nominale }} </div>
+            {{ line }}
+        </div>
+        <div class="buttons" isSelector=true *ngIf="hasButtons"  [ngStyle]="{'opacity': data.game.spinning == true && autoSpinInProgress == false ? 0 : 1}">
+            <div class="block">
+                <app-nominales-selector isNomminaleSelector=true class="nominales-selector" [ngClass]="{'open': showNMSelector}" [open]="showNMSelector" [selectedNominale]="selectedNominale" [nominales]="nominales" (nominaleChanged)="nominaleChanged($event)"></app-nominales-selector>
+                <app-autospin-selector isAutospinSelector=true class="nominales-selector" [ngClass]="{'open': showAutospinSelector}" [open]="showAutospinSelector" [selectedCounter]="selectedNominale" [spinCounters]="autoSpinCount" (nominaleChanged)="autoSpinSelected($event)"></app-autospin-selector>
+                <div [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="autospin" (click)="onAutoSpin()"></div>
+                <div class="spin stop" [ngClass]="{'stop': autoSpinInProgress}" (click)="onSpin()" #spinButton>
+                    <div *ngIf="autoSpinInProgress" class="spinsCounter" [ngClass]="{'infiniteLoop': isInfinite}">
+                        {{ bonusInProgress ? bonusSpinsCount : (isInfinite ? '&#8734;' : spinsRemaining) }}
+                    </div>
+                </div>
+                <div [ngStyle]="{'opacity': autoSpinInProgress == true ? 0 : 1}" class="nominales_selector autospin" (click)="toggleNMSelector()">
+                    <div class="icon"></div>
+                    <div class="value"> {{ nominale }} </div>
+                </div>
             </div>
         </div>
     </div>
