--- a/src/app/Modal/buy-freespins/buy-freespins.component.html
+++ b/src/app/Modal/buy-freespins/buy-freespins.component.html
@@ -3,6 +3,6 @@
         <app-bonus-item *ngFor="let freeSpin of freeSpins" [data]="data" [nominaleMultiplier]="nomMult" [freeSpin]="freeSpin" [selectedBet]="selectedBet" (onAction)="bubbleAction($event)"></app-bonus-item>
     </div>
     <div class="bet-block">
-        <app-bonus-bet [bet]="selectedBet" (selectBet)="selectBet($event)"></app-bonus-bet>
+        <app-bonus-bet [bet]="selectedBet" [currency]="currency" (selectBet)="selectBet($event)"></app-bonus-bet>
     </div>
 </div>
