--- a/src/app/Views/Elements/label-value/label-value.component.scss
+++ b/src/app/Views/Elements/label-value/label-value.component.scss
@@ -24,6 +24,17 @@
     }    
 }
 
+@media only screen and (max-width: 1400px) {
+    .content {
+        .label {
+            font-size: 10px;
+        }
+        .value {
+            font-size: 15px;
+        }
+    }    
+}
+
 @media only screen and (max-width: 920px) {
     .content {
         .label {
