--- a/src/app/Views/action-panel/action-panel.component.scss
+++ b/src/app/Views/action-panel/action-panel.component.scss
@@ -1,20 +1,62 @@
 .content {
-    width: 950px;
-    height: 100px;
     border-radius: 10px;
-    background-color: #b80011;
+    // background-color: #b80011;
+    border: 5px solid #b80011;
     display: flex;
     justify-content: center;
     align-items: center;
+    @media screen and (min-width: 768px) {
+        height: 100px;
+    }
     .data {
-        width: calc(100% - 10px);
-        height: calc(100% - 10px);
         display: flex;
         justify-content: space-evenly;
         align-items: center;
         background-color: #3E0006;
-        border-radius: 10px;
-
+        flex-direction: column;
+        border-radius: 5px;
+        width: 100%;
+        @media screen and (min-width: 768px) {
+            border-radius: 10px;
+            width: calc(100% - 10px);
+            height: calc(100% - 10px);
+            flex-direction: row;
+        }
+        .bets {
+            display: grid;
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+            width: 100%;
+            .balance {
+                order: 1;
+            }
+            .last_win {
+                order: 2;
+            }
+            .nominales {
+                order: 3;
+                grid-column: 1 / span 2;
+                display: grid;
+                grid-template-columns: repeat(5, minmax(0, 1fr));
+                padding-inline: 15px;
+                @media screen and (min-width: 768px) {
+                    display: flex;
+                }
+            }
+            & > div {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-inline: 0;
+            }
+            @media screen and (min-width: 768px) {
+                width: initial;
+                display: flex;
+                align-items: center;
+                & > div {
+                    order: initial;
+                }
+            }
+        }
         .block {
             margin: 15px;
             &.balance {
@@ -31,7 +73,10 @@
                 display: flex;
                 justify-content: space-evenly;
                 align-items: center;
-                gap: 15px;
+                gap: 0 10px;
+                @media screen and (min-width: 768px) {
+                    gap: 15px;
+                }
             }
             &.last_win {
                 flex: 1;
@@ -41,6 +86,11 @@
                 display: flex;
                 justify-content: space-evenly;
                 align-items: center;
+                width: 100%;
+                margin-inline: 0;
+                @media screen and (min-width: 768px) {
+                    width: initial;
+                }
                 .icon {
                     cursor: pointer;
                     margin: 5px;
@@ -67,125 +117,6 @@
                         background-image: url('../../../assets/icons/full-screen.svg');
                     }
                 }
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 1600px) {
-    .content {
-        width: 875px;
-        height: 70px;
-        .data {
-            .block {
-                &.action_buttons {
-                    .icon {
-                        width: 30px;
-                        height: 30px;
-                    }
-                }
-            }
-        }
-    }
-    
-}
-
-
-@media only screen and (max-width: 1400px) {
-    .content {
-        width: 735px;
-        .data {    
-            .block {
-                &.action_buttons {
-                    .icon {
-                        width: 25px;
-                        height: 25px;
-                    }
-                }
-            }
-        }
-    }
-    
-}
-
-@media only screen and (max-width: 1080px) {
-    .content {
-        width: 800px;
-    }
-}
-
-@media only screen and (max-width: 1080px) {
-    .content {
-        width: 770px;
-    }
-}
-
-@media only screen and (max-width: 920px) {
-    .content {
-        width: 555px;
-        height: 30px;
-        .block {
-            &.action_buttons {
-                .icon {
-                    width: 15px;
-                    height: 15px;
-                }
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 500px) {
-    .content {
-        width: 350px;
-        height: 20px;
-        border: 10px solid transparent;
-        border-image: url('../../../assets/borders/bottom_big.svg') 30 round;
-        .block {
-            margin: 5px;
-            &.balance {
-                padding-left: 5px;
-            }
-            &.action_buttons {
-                .icon {
-                    width: 8px;
-                    height: 8px;
-                }
-            }
-            &.nominales {
-                gap: 10px;
-            }
-            
-            &.action_buttons {
-                padding-right: 5px;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 450px) {
-    .content {
-        width: calc(100% - 30px);
-        height: 20px;
-        border: 10px solid transparent;
-        border-image: url('../../../assets/borders/bottom_big.svg') 30 round;
-        .block {
-            margin: 1px;
-            &.balance {
-                padding-left: 5px;
-            }
-            &.action_buttons {
-                .icon {
-                    width: 8px;
-                    height: 8px;
-                }
-            }
-            &.nominales {
-                gap: 5px;
-            }
-            
-            &.action_buttons {
-                padding-right: 5px;
             }
         }
     }
