--- a/src/app/Views/game-container/game-container.component.html
+++ b/src/app/Views/game-container/game-container.component.html
@@ -1,5 +1,2 @@
-<div class="container">
-    <div class="game">
-        <app-game class="gameContainer" [cancelAnimations]="gameData.cancelAnimations" [gameData]="gameData" [data]="data" [lines]="lines" (onAction)="bubbleAction($event)" #gameContainer></app-game>
-    </div>
-</div>
+<app-game class="gameContainer" [cancelAnimations]="gameData.cancelAnimations" [gameData]="gameData" [data]="data"
+    [lines]="lines" (onAction)="bubbleAction($event)" #gameContainer></app-game>
