--- a/src/app/Views/game-container/game-container.component.scss
+++ b/src/app/Views/game-container/game-container.component.scss
@@ -1,48 +1,4 @@
-.container {
-    width: 1155px;
-    height: 100%;
-    .game {
-        height: calc(100% - 93px);
-        margin-bottom: 70px;
-        .gameContainer {
-            height: 100%;
-            width: 100%;
-        }
-    }
-}
-
-@media only screen and (max-width: 1600px) {
-    .container {
-        width: 1100px;
-        height: 100%;
-        .game {
-            height: 100%;
-            margin-bottom: 70px;
-            .gameContainer {
-                height: 100%;
-                width: 100%;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 1400px) {
-    .container {
-        width: 730px;
-    }
-}
-
-@media only screen and (max-width: 920px) {
-    .container {
-        width: 100%;
-        height: 100%;
-        .game {
-            height: 100%;
-            margin-bottom: 5px;
-            .gameContainer {
-                height: 100%;
-                width: 100%;
-            }
-        }
-    }
+app-game {
+    display: grid;
+    grid-template-rows: minmax(0, 1fr);
 }
