--- a/src/app/Views/game/game.component.scss
+++ b/src/app/Views/game/game.component.scss
@@ -1,9 +1,9 @@
 #reels {
-    display: flex;
-    width: 100%;
-    height: 100%;
+    display: grid;
+    gap: 0 10px;
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+    grid-template-rows: minmax(0, 1fr);
     .reel {
-        width: 200px;
         height: 100%;
         border-radius: 10px;
         background: linear-gradient(#fe8900 0%, #df2314 50%, #fe8900 100%);
@@ -20,101 +20,11 @@
             align-items: flex-end;
             overflow: hidden;
         }
-        &:not(:first-child) {
-            margin-left: 10px;
-        }
-        &:not(:last-child) {
-            margin-right: 10px;
-        }
 
         &.bonus {
             box-shadow: 1px -1px 10px 7px rgba(255,255,255,0.75);
             -webkit-box-shadow: 1px -1px 10px 7px rgba(255,255,255,0.75);
             -moz-box-shadow: 1px -1px 10px 7px rgba(255,255,255,0.75);
-        }
-    }
-}
-
-@media only screen and (max-width: 1600px) {
-    #reels {
-        .reel {
-            width: 200px;
-            &:not(:first-child) {
-                margin-left: 10px;
-            }
-            &:not(:last-child) {
-                margin-right: 10px;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 1400px) {
-    #reels {
-        .reel {
-            width: 130px;
-        }
-    }
-}
-
-@media only screen and (max-width: 1080px) {
-    #reels {
-        .reel {
-            width: 130px;
-        }
-    }
-}
-
-@media only screen and (max-width: 1040px) {
-    #reels {
-        .reel {
-            width: 120px;
-        }
-    }
-}
-
-@media only screen and (max-width: 980px) {
-    #reels {
-        .reel {
-            width: 120px;
-            &:not(:first-child) {
-                margin-left: 7px;
-            }
-            &:not(:last-child) {
-                margin-right: 7px;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 920px) {
-    #reels {
-        .reel {
-            width: 70px;
-            border: 10px solid transparent;
-            border-image: url('../../../assets/borders/middle.svg') 25 round;
-            &:not(:first-child) {
-                margin-left: 5px;
-            }
-            &:not(:last-child) {
-                margin-right: 5px;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width: 500px) {
-    #reels {
-        .reel {
-            width: 30px;
-            border: 5px solid transparent;
-            border-image: url('../../../assets/borders/middle.svg') 25 round;
-            &:not(:first-child) {
-                margin-left: 5px;
-            }
-            &:not(:last-child) {
-                margin-right: 5px;
-            }
         }
     }
 }
