--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,65 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@300;400;500;600;700&display=swap');
+
+/* break pints based on bootstrap */
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
+$xxl: 1400px;
+
 * {
     padding: 0;
     margin: 0;
     font-family: 'Radio Canada', sans-serif;
     user-select: none;
+}
+
+.container {
+    margin: auto;
+    padding-inline: 15px;
+    /* reponsive media queries */
+    @media screen and (min-width: $sm) {
+        width: 540px;
+    }
+    @media screen and (min-width: $md) {
+        width: 720px;
+    }
+    @media screen and (min-width: $lg) {
+        width: 960px;
+    }
+    @media screen and (min-width: $xl) {
+        width: 1140px;
+    }
+    @media screen and (min-width: $xxl) {
+        width: 1320px;
+    } 
+
+}
+
+/*  */
+.icons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    img {
+        width: 50px !important;
+        aspect-ratio: 1/1;
+        height: initial !important;
+        @media screen and (min-width: $sm) {
+            width: 150px !important;
+        }
+        @media screen and (min-width: $md) {
+            width: 50px !important;
+        }
+        @media screen and (min-width: $lg) {
+            width: 150px !important;
+        }
+        /* height */
+        @media screen and (max-height: 780px) {
+            width: 100px !important;
+        }
+    }
 }
