--- a/src/app/Views/bonus-button/bonus-button.component.html
+++ b/src/app/Views/bonus-button/bonus-button.component.html
@@ -1,6 +1,4 @@
-<div class="bonus" (click)="onClick()">
-    <div class="data">
-        <div class="logo"></div>
-        <div class="text"> BUY WILD BONUS</div>
-    </div>
+<div class="data" (click)="onClick()">
+    <div class="logo"></div>
+    <div class="text"> BUY WILD BONUS</div>
 </div>
