--- a/src/app/Views/bonus-button/bonus-button.component.scss
+++ b/src/app/Views/bonus-button/bonus-button.component.scss
@@ -1,35 +1,28 @@
-.bonus {
-    cursor: pointer;
-    height: 100px;
-    border-radius: 10px;
-    background-color: #b80011;
+.data {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    background-color: #3E0006;
+    border-radius: 10px;
+    border: 5px solid #b80011;
+    box-sizing: border-box;
+    @media screen and (min-width: 768px) {
+        height: 100px;
+    }
 
-    .data {
-        width: calc(100% - 10px);
-        height: calc(100% - 10px);
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        background-color: #3E0006;
-        border-radius: 10px;
-
-        .logo {
-            width: 65px;
-            height: 65px;
-            background-image: url('../../../assets/symbols/leaf.svg');
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: contain;
-            flex: 1;
-        }
-        .text {
-            color: #FFF;
-            font-size: 16px;
-            font-weight: 900;
-            flex: 1;
-        }
+    .logo {
+        width: 65px;
+        height: 65px;
+        background-image: url('../../../assets/symbols/leaf.svg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        flex: 1;
+    }
+    .text {
+        color: #FFF;
+        font-size: 16px;
+        font-weight: 900;
+        flex: 1;
     }
 }
