--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,17 +49,20 @@ $xxl: 1400px;
         aspect-ratio: 1/1;
         height: initial !important;
         @media screen and (min-width: $sm) {
-            width: 150px !important;
+            width: 70px !important;
         }
         @media screen and (min-width: $md) {
-            width: 50px !important;
+            width: 70px !important;
         }
         @media screen and (min-width: $lg) {
+            width: 90px !important;
+        }
+        @media screen and (min-width: $xl) {
+            width: 120px !important;
+        }
+        @media screen and (min-width: $xxl) {
             width: 150px !important;
         }
         /* height */
-        @media screen and (max-height: 780px) {
-            width: 100px !important;
-        }
     }
 }
