fix latest issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,8 +26,17 @@
           <div *ngFor="let symbol of winninSymbols.symbols" class="symbol"
             [ngStyle]="{'background-image': 'url(./assets/symbols/'+symbol+'.svg)'}"></div>
         </div>
-        <div class="ammount">
-          <span> {{ winninSymbols.wonAmmount }} {{ data.user.currency }}</span>
+        <div *ngIf="winninSymbols" class="informationText">
+          <div class="line">
+            <span *ngIf="winninSymbols.lineId > 0"> Line {{ winninSymbols.lineId }}</span>
+            <span *ngIf="winninSymbols.lineId == 0"> Scatter </span>
+          </div>
+          <div class="symbols">
+            <div *ngFor="let symbol of winninSymbols.symbols" class="symbol" [ngStyle]="{'background-image': 'url(./assets/symbols/'+symbol+'.svg)'}"></div>
+          </div>
+          <div class="ammount">
+            <span> {{ winninSymbols.wonAmmount }} {{ data.user.currency }}</span>
+          </div>
         </div>
       </div>
     </div>
