--- a/src/app/Views/Elements/label-value/label-value.component.scss
+++ b/src/app/Views/Elements/label-value/label-value.component.scss
@@ -11,4 +11,14 @@
         color: #fff;
         text-align: left;
     }
+    &.mobile {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: #3E0006;
+        border-radius: 10px;
+        border: 5px solid #b80011;
+        box-sizing: border-box;
+    }
 }
