--- a/src/app/loader/loader.component.scss
+++ b/src/app/loader/loader.component.scss
@@ -19,6 +19,8 @@ section {
         display: flex;
         width: 100%;
         max-width: 400px;
+        margin: initial;
+        justify-content: center;
         span {
             background: #FE8112;
             height: 10px;
